# farkle

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  approx.bincode  exact2.bincode  farkle_wasm.d.ts  farkle_wasm.js  farkle_wasm_bg.wasm  farkle_wasm_bg.wasm.d.ts  package-lock.json  package.json  userscript.development.user.js  userscript.user.js  webpack.config.js
scripts/: .gitignore  profile.sh
src/: bin.rs  defs.rs  dice_set.rs  farkle_populator.rs  farkle_serialiser.rs  farkle_solver.rs  farkle_solver_wasm.rs  lib.rs  precompute.rs  solver_trait.rs  utils.rs
src/cli/: main.rs
src/cli/binlib/: approx.rs  args.rs  bin.rs  exec.rs  mod.rs  path_util.rs  relax.rs  simulate.rs
userscript/: entry.js  farkle.js  farkleScript.js  probBar.js  runner.js  userscript.js
